mise à jour de vinted

--- a/Vinted/Application mobile/Frontend/miniprogram-6/pages/historiquemessage/historiquemessage.wxml
+++ b/Vinted/Application mobile/Frontend/miniprogram-6/pages/historiquemessage/historiquemessage.wxml
@@ -16,7 +16,11 @@
     />
   </view>
 </view>
-
+<!--appeler composante-->
+<filters
+filters="{{filter}}" 
+selected="{{selectedFilter}}" 
+/>
 <!--les sections de message-->
 
 <view class="messagerie" >
