mise à jour de vinted

--- a/Vinted/Application mobile/Frontend/miniprogram-6/pages/payement/payement.wxml
+++ b/Vinted/Application mobile/Frontend/miniprogram-6/pages/payement/payement.wxml
@@ -23,7 +23,7 @@
        <view class="texte">{{quantite}}</view>
       <view class="plus" bind:tap="augmenter">+</view>
     </view>
-    <view class="prix">15000</view>
+    <view class="prix">{{prixTotal}} FCFA</view>
     </view>
     </view>
     <view class="TOUT">
